syntax = "proto3";

package proto;

// NewGoods 新上架商品
message NewGoods{
  uint32 iD = 1; //               uint32  //商品id mediumint(8)
	uint32 catID = 2; //            int64   //分类id int(11)
	uint32 extendCatID = 3; //      int64   //扩展分类id int(11)
	string goodsSN = 4; //          string  //商品编号 varchar(60)
	string goodsName = 5; //        string  //商品名称 varchar(120)
	uint32 clickCount = 6; //       int64   //点击数 int(10)
	uint32 brandID = 7; //          int64   //品牌id smallint(5)
	uint32 storeCount = 8; //       int32   //库存数量 smallint(5)
	uint32 commentCount = 9; //     int32   //商品评论数 smallint(5)
	uint32 weight = 10; //           int32   //商品重量克为单位 int(11)
	float marketPrice = 11; //      float32 //市场价 decimal(10,
	float shopPrice = 12; //        float32 //本店价 decimal(10,
	float costPrice = 13; //        float32 //商品成本价 decimal(10,
	string priceLadder = 14; //      string  //价格阶梯 text COMMENT '价格阶梯
	string keywords = 15; //         string  //商品关键词 varchar(255)
	string goodsRemark = 16; //      string  //商品简单描述 varchar(255)
	string goodsContent = 17; //     string  //商品详细描述 text COMMENT '商品详细描述
	string originalImg = 18; //      string  //商品上传原始图 varchar(255)
	bool isReal = 19; //           bool    //是否为实物 tinyint(3)
	bool isOnSale = 20; //         bool    //是否上架 tinyint(1)
}

message NewGoodsResult {
  repeated NewGoods goodses = 1;
}
